# controllers/instructorController.js
@@ -18,6 +18,8 @@ const createNewInstructor = async (req, res) => {
     const result = await Instructor.create({
       firstname: req.body.firstname,
       lastname: req.body.lastname,
+      title: req.body.title, 
+      description: req.body.description
     });
     res.status(201).json(result);
   } catch (err) {
@@ -26,18 +28,22 @@ const createNewInstructor = async (req, res) => {
 };
 
 const updateInstructor = async (req, res) => {
-  if (!req?.body?.id) {
+  console.log(req.body)
+  if (!req?.body?._id) {
     return res.status(400).json({ message: "ID parameter is required." });
   }
 
-  const instructor = await Instructor.findOne({ _id: req.body.id }).exec();
+  const instructor = await Instructor.findOne({ _id: req.body._id }).exec();
   if (!instructor) {
     return res
       .status(204)
-      .json({ message: `Instructor ID ${req.body.id} not found` });
+      .json({ message: `Instructor ID ${req.body._id} not found` });
   }
   if (req.body?.firstname) instructor.firstname = req.body.firstname;
   if (req.body?.lastname) instructor.lastname = req.body.lastname;
+  if (req.body?.title) instructor.title = req.body.title;
+  if (req.body?.description) instructor.description = req.body.description;
+  if(req.body?.videos) instructor.videos = req.body.videos;
   const result = await instructor.save();
   res.json(result);
 };
