# controllers/registerController.js
@@ -2,11 +2,11 @@ const User = require('../model/User');
 const bcrypt = require('bcrypt');
 
 const handleNewUser = async (req, res) => {
-    const { user, pwd } = req.body;
-    if (!user || !pwd) return res.status(400).json({ 'message': 'Username and password are required.' });
+    const { email, firstname, lastname, pwd } = req.body;
+    if (!email || !firstname || !lastname || !pwd) return res.status(400).json({ 'message': 'All fields are required.' });
 
     // check for duplicate usernames in the db
-    const duplicate = await User.findOne({ username: user }).exec();
+    const duplicate = await User.findOne({ email: email }).exec();
     if (duplicate) return res.sendStatus(409); //Conflict 
 
     try {
@@ -15,13 +15,15 @@ const handleNewUser = async (req, res) => {
 
         //create and store the new user
         const result = await User.create({
-            "username": user,
+            "firstname": firstname,
+            "lastname": lastname,
+            "email": email,
             "password": hashedPwd
         });
 
         console.log(result);
 
-        res.status(201).json({ 'success': `New user ${user} created!` });
+        res.status(201).json({ 'success': `New user ${result.firstname} ${result.lastname} created!` });
     } catch (err) {
         res.status(500).json({ 'message': err.message });
     }
